2016-07-21  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gplink/gplink.c, gplink/gplink.h.in:
    Save the local registers the default behavior. Changed
    the relevant option from "--save-local" to "--no-save-local".

  * gpasm/cod.c, gplink/cod.c, libgputils/gpcod.c, libgputils/gpcod.h:
    Use the gp_cod_put_debug_symbol function.

  * libgputils/gpsystem.c, libgputils/gpsystem.h:
    The gp_strlen_Plimit function got a new parameter.

  * gputils/dump.c:
    Code formatting.

2016-07-20  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpsystem.c:
    bugfix

2016-07-20  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gplink/cod.c, gplink/gplink.c,
    gplink/gplink.h.in, libgputils/gpcod.c, libgputils/gpcod.h:
    New command option: "-j" or "--save-local"
    The gplink save the local register names to COD file.
    The solution is based on the patch:
	"#68 gplink - save local symbols to cod file"
    Thanks to Juan for the patch.

  * gpasm/cod.c, gplink/cod.c, libgputils/gpsystem.c,
    libgputils/gpsystem.h:
    Long symbol length limit bugfix.

  * gpasm/gpasm.h.in, gpasm/lst.c, gpasm/util.c:
    More information case of definitions.

  * gputils/dump.c, gputils/dump.h, gputils/gpvc.c:
    Minor code optimization.

2016-07-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/cod.c, gplink/cod.c, gplink/gplink.c, gplink/gplink.h.in,
    gplink/lst.c, gplink/map.c, gplink/parse.y, gplink/scan.l,
    gplink/script.c:
    Code optimization.

2016-07-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gputils/gpdasm.c, gputils/gplib.c, gputils/gpstrip.c,
    gputils/gpvo.c, gputils/parse.y, gputils/scan.l,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h,
    libgputils/gpsystem.c, libgputils/gpsystem.h:
    Code formatting.

2016-07-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/gpasm.h.in, gplink/script.c, gplink/script.h,