@@ -9,7 +9,6 @@ gputils
 gpasm
   * Clean up the byte verses word, data memory/program memory stuff.
   * Move opcode generator from /gpasm/directive.c to /libgputils/gpopcode.c.
-  * Move COD file generation to library.
   * Undefined coff symbols are always at the end of the coff table.
   * Add relocations for the difference between symbols in the same section.
   * Allow multiple symbols with the same name in different sections of COFF asm files.
